add: postgress container for tests
- add wrapper postgres container